--- a/README.mdx
+++ b/README.mdx
@@ -1,5 +1,5 @@
 # 💫 About Me:
-Yousef Romany is a front-end developer who began his journey in web development in 2017. Over the years, he has worked on numerous projects covering various domains, gaining expertise in technologies like HTML, CSS, JavaScript, and frameworks such as Next.js. He has a strong background in converting Figma designs into responsive websites and has experience working with tools like Tailwind CSS and ShadCN. Yousef is skilled at building dynamic web applications, including projects using TypeORM and Nest.js. His versatility allows him to tackle a wide range of challenges in the web development space.<br><br><br><br><br><br>
+Yousef Romany is a front-end developer who began his journey in web development in 2017. Over the years, he has worked on numerous projects covering various domains, gaining expertise in technologies like HTML, CSS, JavaScript, and frameworks such as Next.js. He has a strong background in converting Figma designs into responsive websites and has experience working with tools like Tailwind CSS and ShadCN. Yousef is skilled at building dynamic web applications, including projects using TypeORM and Nest.js. His versatility allows him to tackle a wide range of challenges in the web development space.<br><br><br>
 ## 🌐 Socials:
 [![Facebook](https://img.shields.io/badge/Facebook-%231877F2.svg?logo=Facebook&logoColor=white)](https://facebook.com/yuosef.frahat) [![Instagram](https://img.shields.io/badge/Instagram-%23E4405F.svg?logo=Instagram&logoColor=white)](https://instagram.com/yuosefromany) [![LinkedIn](https://img.shields.io/badge/LinkedIn-%230077B5.svg?logo=linkedin&logoColor=white)](https://linkedin.com/in/yousef-romany-09a2a5233) [![Medium](https://img.shields.io/badge/Medium-12100E?logo=medium&logoColor=white)](https://medium.com/@@yousefromany527) [![Stack Overflow](https://img.shields.io/badge/-Stackoverflow-FE7A16?logo=stack-overflow&logoColor=white)](https://stackoverflow.com/users/16506699) 
 
